Use G1 collector in place of CMS
Also remove MaxPermSize as is obsolete in JDK8